     "nax" removed)
   * call to "open_buffer" changed: unit must be a valid fortran unit > 0;
     max number of records is no longer specified; a new flag explicitly
     specifies if writing to RAM buffer is required. Functionalities of 
     Modules/buffers.f90 have been considerably modified and extended.

Fixed in svn version:

   * PWscf: Forces with finite electric field (lelfield=.ture.) and US PP
     were incorrect in parallel execution
   * D3: bug when the crystal has symmetry but the small group of the 
     q-point has no symmetry.
   * Bogus "file not found" error in pp.x when extracting quantities not
     requiring wave functions if these were "collected" - v.5.0.2 only
   * some quantities calculated in real space (including the charge itself
     when tqr=.true.) were not always accurately computed in parallel
     execution if the number of planes wasn't the same for all processors
   * Bogus symmetry error in NEB due to missing re-initialization
     of fractional translations

Fixed in patches to 5.0.2 version:

   * PW, PP, PHonon: files for DFT+U produced by previous versions
     could no longer be read
   * PHonon: restart with convt=.true. was not working with PAW
   * PHonon: in matdyn.x, displacement patterns were no longer correct
     if eigenvectors of the dynamical matrix were also written to file
   * PHonon: compatibility with files produced by previous releases
     was broken if pool were used
   * PHonon: symmetry Sq=-q+G introduced in v.5.0.2 could lead to bad 
     phonons in some cases and has been disabled
   * PHonon: effective charges eu + PAW were not accurate with pools;
     effective charges eu + US PP + spin-orbit nonmagnetic were not
     working in parallel.
   * Bug fix for NC pseudos with GIPAW info, for upf version 2 only:
     Pseudo local potential was incorrectly written and read. 
   * divide_class: wrong check for T_h
   * PP: incorrect check in bands.f90 (v.5.0.2 only)